// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CourseSearchCard > renders default as expected 1`] = `
<div>
  <a
    class="flex flex-col container-lined p-6 max-w-[828px] size-full transition-transform duration-200 hover:scale-[1.01] hover:container-elevated"
    href="https://bluedot.org/courses/what-the-fish"
    tabindex="0"
  >
    <div
      class="h-[200px] w-full mb-4"
    >
      <img
        alt="Title"
        class="size-full object-cover rounded-lg"
        src="/images/courses/default.webp"
      />
    </div>
    <div
      class="flex flex-col flex-1"
    >
      <div
        class="flex-1"
      >
        <h3
          class="bluedot-h3 not-prose mb-3"
        >
          Title
        </h3>
      </div>
    </div>
  </a>
</div>
`;

exports[`CourseSearchCard > renders with optional args 1`] = `
<div>
  <a
    class="flex flex-col container-lined p-6 max-w-[828px] size-full transition-transform duration-200 hover:scale-[1.01] hover:container-elevated"
    href="https://bluedot.org/courses/what-the-fish"
    tabindex="0"
  >
    <div
      class="h-[200px] w-full mb-4"
    >
      <img
        alt="Title"
        class="size-full object-cover rounded-lg"
        src="/courses/what-the-fish/image.png"
      />
    </div>
    <div
      class="flex flex-col flex-1"
    >
      <div
        class="flex-1"
      >
        <h3
          class="bluedot-h3 not-prose mb-3"
        >
          Title
        </h3>
        <p
          class="bluedot-p not-prose text-bluedot-black"
        >
          A short description of the course
        </p>
      </div>
      <div
        class="flex justify-end mt-4"
      >
        <div
          class="text-size-xs text-bluedot-black gap-1 flex flex-col items-end"
        >
          <span
            class="flex gap-[3px] items-start font-bold"
          >
            4.7
             
            <svg
              class="mt-px"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 576 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </a>
</div>
`;
